--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 }
 
 body{    
+    max-width: 1440px;
     background: url(/images/bg-pattern-top.svg) no-repeat, url(/images/bg-pattern-bottom.svg) no-repeat, hsl(185, 75%, 39%);
     background-position: right 50vw bottom 50vh, left 50vw top 50vh;
 }
@@ -28,8 +29,8 @@ body{
 .card-container{
     position: absolute;
     background: white;
-    width: 640px;
-    height: 720px;
+    width: 400px;
+    height: 480px;
     display: flex;
     flex-direction: column;
     border-radius: 5%;
@@ -52,7 +53,7 @@ body{
         width: 25%;
         height: auto;
         border-radius: 50%;
-        border: 10px solid white;
+        border: 7px solid white;
     }
 
     .personal-info-container{
@@ -66,7 +67,7 @@ body{
 
         .profile-name-age{
             font-weight: 700;
-            font-size: 2em;
+            font-size: 1.5em;
             margin-top: 10%;
 
             span{
@@ -77,8 +78,8 @@ body{
 
         .location{
             font-weight: 400;
-            margin-top: 15px;
-            font-size: 1.5em;
+            margin-top: 10px;
+            font-size: 1.2em;
             color: var(--dark-gray);
         }
     }
@@ -99,15 +100,15 @@ body{
     font-family: "Kumbh Sans";
 
     h2{
-        font-size: 2em;
+        font-size: 1.5em;
         font-weight: 700;
     }
 
     p{
-        font-size: 1.2em;
+        font-size: .9em;
         color: var(--dark-gray);
-        letter-spacing: 3px;
-        margin-top: 10px;
+        letter-spacing: 2px;
+        margin-top: 6px;
     }
 
     .followers{
@@ -133,6 +134,11 @@ body{
         justify-content: center;
         align-items: center;
     }
-
 }
 
+@media screen and (max-width:500px){
+    .card-container{
+        width: 90vw;
+        height: 110vw;
+    }
+}
