--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 }
 
 body {
+  max-width: 1440px;
   background: url(/images/bg-pattern-top.svg) no-repeat, url(/images/bg-pattern-bottom.svg) no-repeat, #19a2ae;
   background-position: right 50vw bottom 50vh, left 50vw top 50vh;
 }
@@ -33,8 +34,8 @@ body {
 .card-container {
   position: absolute;
   background: white;
-  width: 640px;
-  height: 720px;
+  width: 400px;
+  height: 480px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -63,7 +64,7 @@ body {
   width: 25%;
   height: auto;
   border-radius: 50%;
-  border: 10px solid white;
+  border: 7px solid white;
 }
 
 .upper-half .personal-info-container {
@@ -87,7 +88,7 @@ body {
 
 .upper-half .personal-info-container .profile-name-age {
   font-weight: 700;
-  font-size: 2em;
+  font-size: 1.5em;
   margin-top: 10%;
 }
 
@@ -98,8 +99,8 @@ body {
 
 .upper-half .personal-info-container .location {
   font-weight: 400;
-  margin-top: 15px;
-  font-size: 1.5em;
+  margin-top: 10px;
+  font-size: 1.2em;
   color: var(--dark-gray);
 }
 
@@ -122,15 +123,15 @@ body {
 }
 
 .lower-half h2 {
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: 700;
 }
 
 .lower-half p {
-  font-size: 1.2em;
+  font-size: .9em;
   color: var(--dark-gray);
-  letter-spacing: 3px;
-  margin-top: 10px;
+  letter-spacing: 2px;
+  margin-top: 6px;
 }
 
 .lower-half .followers {
@@ -188,5 +189,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (max-width: 500px) {
+  .card-container {
+    width: 90vw;
+    height: 110vw;
+  }
 }
 /*# sourceMappingURL=main.css.map */
